# costrecon-aws

./: .gitignore  LICENSE  README.md  __init__.py  aws_client.py  cli_report_generator.py  constants.py  costrecon.py  pdf_generator.py  pdf_report_generator.py  pyproject.toml
aws_client/: __init__.py  base.py  budget.py  client.py  cost.py  coverage.py  savings.py
utils/: __init__.py  cli_report_generator.py  pdf_report_generator.py  report_helpers.py
